# PE2-CLI

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PUBLISH.md  README.md  fixgit.bat  hi.md  package-lock.json  package.json  publish.bat  publish.sh  purge.bat
.github/workflows/: publish.yml
crates/pe2-bindings/: Cargo.toml
crates/pe2-bindings/src/: lib.rs
crates/pe2-cli/: AGENTS.md  Cargo.toml
crates/pe2-cli/src/: args.rs  commands.rs  main.rs
crates/pe2-core/: AGENTS.md  Cargo.toml
crates/pe2-core/src/: analysis.rs  config.rs  constants.rs  engine.rs  errors.rs  lib.rs  messages.rs  paths.rs  preferences.rs  session.rs  stats.rs  templates.rs  validation.rs  write_atomic.rs
crates/pe2-core/tests/: integration.rs
crates/pe2-providers/: AGENTS.md  Cargo.toml
crates/pe2-providers/src/: anthropic.rs  client.rs  factory.rs  google.rs  headers.rs  lib.rs  ollama.rs  openai.rs  openrouter.rs
crates/pe2-providers/tests/: integration.rs
crates/pe2-tui/: AGENTS.md  Cargo.toml
crates/pe2-tui/src/: banner.rs  display.rs  interactive.rs  lib.rs  theme.rs
npm/: package.json
scripts/: set-npm-token-for-actions.ps1
src/: analysis.js  cli.js  config.js  configPrompt.js  constants.js  engine.js  errorHandler.js  messages.js  paths.js  templates.js  ui.js  utils.js  versionInfo.js
src/cli/: commands.js  interactive.js  interactiveLineLoop.js  main.js  promptProcessing.js
src/cli/commandHandlers/: configCommands.js  helpCommand.js  index.js  preferencesCommands.js  registry.js  sessionCommands.js
src/lib/: llm.js
src/providers/: assertNonEmptyString.js  defaults.js  index.js  openRouterHeaders.js
src/providers/anthropic/: client.js
src/providers/google/: client.js
src/providers/ollama/: client.js
src/providers/openai/: client.js
src/providers/openrouter/: client.js  modelIds.js
src/utils/: display.js  index.js  preferences.js  session.js  stats.js  theme.js  validation.js  writeJsonFileAtomically.js
tests/: analysis.test.js  config.test.js  engine.test.js  providers.test.js  validation.test.js  writeJsonFileAtomically.test.js
