[workspace]
members = [
    "crates/pe2-core",
    "crates/pe2-providers",
    "crates/pe2-tui",
    "crates/pe2-cli",
    "crates/pe2-bindings",
]
resolver = "2"

[workspace.package]
version = "4.0.2"
edition = "2021"
license = "ISC"
authors = ["KleoSr <kleosr@proton.me>"]
description = "KleoSr PE2-CLI: Convert raw prompts to PE2-optimized prompts using adaptive intelligence"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
indicatif = "0.17"
regex = "1"
colored = "3"
comfy-table = "7"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
rand = "0.8"
arboard = "3"
async-trait = "0.1"
