[package]
name = "pe2-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native Node.js bindings for PE2-CLI via napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
pe2-core = { path = "../pe2-core" }
pe2-providers = { path = "../pe2-providers" }
napi = { version = "2", features = ["tokio_rt", "async"] }
napi-derive = "2"
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
napi-build = "2"
