[package]
name = "pe2-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "pe2"
path = "src/main.rs"

[dependencies]
pe2-core = { path = "../pe2-core" }
pe2-providers = { path = "../pe2-providers" }
pe2-tui = { path = "../pe2-tui" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
