[package]
name = "pe2-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
pe2-core = { path = "../pe2-core" }
pe2-providers = { path = "../pe2-providers" }
crossterm = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
